--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,8 @@
 
 .header-items {
     display: flex;
+    position: relative;   /* TODO: Por revisar*/
+    right: 18px;
 }
 
 .anchor {                       /* !: Tener en cuenta*/
@@ -99,13 +101,56 @@ li {
 }
 
 .about_us{
-    display: flex;              /* TODO: Por revisar*/
+    display: flex;          /* TODO: Por revisar*/
     background: purple;
     margin-left: 34px;
     width: 93.5%;
     margin-top: 47px;
     height: 485px;
     opacity: 0.4;
+}
+
+.about_us1 {
+    margin-left: 38px;
+    margin-top: 5px;
+}
+
+.about_us2 {
+    margin-left: 25px;
+}
+
+.h_about {
+    margin-top: 23px;
+    margin-left: 1px;
+
+}
+
+.h2_about {
+    margin-left: 3px;
+    font-size: 22px;
+    line-height: 30px;
+    width: 400px;
+    height: 200px;
+    position: relative;  /* TODO: Por revisar*/
+    bottom: 10px;
+}
+
+.row_images {
+    display: flex;
+    gap: 20px;
+    margin-left: 7px;
+    position: relative;  /* TODO: Por revisar*/
+    bottom: 110px;
+
+}
+
+.p_images {
+    font-size: 14px;
+    line-height: 18px;
+    width: 450px;
+    margin-left: 2px;
+    position: relative;   /* TODO: Por revisar*/
+    bottom: 30px;
 }
 
 .events{
