--- a/css/main.css
+++ b/css/main.css
@@ -23,13 +23,10 @@
 
 .header-items {
     display: flex;
-    position: relative;   /* TODO: Por revisar*/
-    right: 18px;
+    padding: 30px;
 }
 
-.anchor {                       /* !: Tener en cuenta*/
-  display: inline-block;
-  width: 67px;
+.anchor {                 
   font-size: 14px;
 }
 
@@ -49,8 +46,6 @@ li {
 .main {
     margin-left: 80px;
     font-size: 30px;
-    position: relative;
-    right: 20px;
 }
 
 .demo {
